--- a/week1/index.html
+++ b/week1/index.html
@@ -5,11 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>Vite App</title>
+    <title>햄식이를 도와줄람줄</title>
   </head>
   <body>
-    <div id="app"></div>
-    Hello
-    <script type="module" src="/main.js"></script>
+    Hi
   </body>
 </html>
