--- a/week1/index.html
+++ b/week1/index.html
@@ -8,6 +8,45 @@
     <title>햄식이를 도와줄람줄</title>
   </head>
   <body>
-    Hi
+    <header><h1>햄식이를 도와줄람줄</h1></header>
+    <main>
+      <nav>
+        <p>다른 거 먹람먹</p>
+        <ul>
+          <li>맥도날드</li>
+          <li>버거킹</li>
+        </ul>
+      </nav>
+      <section>
+        <h2>햄버거 리스트</h2>
+        <article>
+          <img src="" alt="">
+          <div>
+            <strong>빅맥</strong>
+            <p>5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article>
+          <img src="" alt="">
+          <div>
+            <strong>빅맥</strong>
+            <p>5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+      </section>
+      <section>
+        <h2>장바구니</h2>
+        <div></div>
+        <h3>누적 금액</h3>
+        <p>0원</p>
+        <div></div>
+        <div>
+          <button type="button">주문하기</button>
+          <button type="button">취소하기</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
