[feat] visaully hidden css 적용

--- a/week1/index.html
+++ b/week1/index.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
       <section>
-        <h2>햄버거 리스트</h2>
+        <h2 class="visually_hidden">햄버거 리스트</h2>
         <article>
           <img src="" alt="">
           <div>
