--- a/week1/index.html
+++ b/week1/index.html
@@ -9,7 +9,7 @@
     <title>햄식이를 도와줄람줄</title>
   </head>
   <body>
-    <header><h1>햄식이를 도와줄람줄</h1></header>
+    <header class="header"><h1>햄식이를 도와줄람줄</h1></header>
     <main>
       <nav>
         <p>다른 거 먹람먹</p>
