--- a/week1/index.html
+++ b/week1/index.html
@@ -10,17 +10,17 @@
   </head>
   <body>
     <header class="header"><h1>햄식이를 도와줄람줄</h1></header>
-    <main>
-      <nav>
-        <p>다른 거 먹람먹</p>
-        <ul>
-          <li>맥도날드</li>
-          <li>버거킹</li>
+    <main class="main__wrapper">
+      <nav  class="main__nav box">
+        <p class="main__nav-title">다른 거 먹람먹</p>
+        <ul class="main__nav-lists">
+          <li class="main__nav-list">맥도날드</li>
+          <li class="main__nav-list">버거킹</li>
         </ul>
       </nav>
-      <section>
+      <section class="main__list">
         <h2 class="visually_hidden">햄버거 리스트</h2>
-        <article>
+        <article class="box">
           <img src="" alt="">
           <div>
             <strong>빅맥</strong>
@@ -28,7 +28,7 @@
             <p>빅맥이랑 밀맥주</p>
           </div>
         </article>
-        <article>
+        <article class="box">
           <img src="" alt="">
           <div>
             <strong>빅맥</strong>
@@ -37,7 +37,7 @@
           </div>
         </article>
       </section>
-      <section>
+      <section class="main__cart box">
         <h2>장바구니</h2>
         <div></div>
         <h3>누적 금액</h3>
