[feat] hamburger list ui

--- a/week1/index.html
+++ b/week1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
@@ -18,21 +18,77 @@
           <li class="main__nav-list">버거킹</li>
         </ul>
       </nav>
-      <section class="main__list">
+      <section class="main__lists">
         <h2 class="visually_hidden">햄버거 리스트</h2>
-        <article class="box">
-          <img src="" alt="">
-          <div>
-            <strong>빅맥</strong>
-            <p>5,500원</p>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
             <p>빅맥이랑 밀맥주</p>
           </div>
         </article>
-        <article class="box">
-          <img src="" alt="">
-          <div>
-            <strong>빅맥</strong>
-            <p>5,500원</p>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
             <p>빅맥이랑 밀맥주</p>
           </div>
         </article>
