--- a/week1/index.html
+++ b/week1/index.html
@@ -92,6 +92,30 @@
             <p>빅맥이랑 밀맥주</p>
           </div>
         </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
+        <article class="main__list box">
+          <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
+          <div class="main__list-text-wrapper">
+            <strong class="main__list-text">빅맥</strong>
+            <p class="main__list-text">5,500원</p>
+            <p>빅맥이랑 밀맥주</p>
+          </div>
+        </article>
       </section>
       <section class="main__cart box">
         <h2>장바구니</h2>
