--- a/week1/index.html
+++ b/week1/index.html
@@ -118,14 +118,14 @@
         </article>
       </section>
       <section class="main__cart box">
-        <h2>장바구니</h2>
-        <div></div>
-        <h3>누적 금액</h3>
+        <h2 class="main__cart-title">장바구니</h2>
+        <div class="main__cart-line"></div>
+        <h3 class="main__cart-title">누적 금액</h3>
         <p>0원</p>
-        <div></div>
-        <div>
-          <button type="button">주문하기</button>
-          <button type="button">취소하기</button>
+        <div class="main__cart-line"></div>
+        <div class="main__cart-button-wrapper">
+          <button class="main__cart-button" type="button">주문하기</button>
+          <button class="main__cart-button" type="button">취소하기</button>
         </div>
       </section>
     </main>
