[feat] set hamburger lists

--- a/week1/index.html
+++ b/week1/index.html
@@ -31,89 +31,89 @@
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">빅빅맥</strong>
+            <p class="main__list-text">5,600원</p>
+            <p>빅빅맥이랑 밀맥주</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">빅빅빅맥</strong>
+            <p class="main__list-text">5,700원</p>
+            <p>빅빅빅맥이랑 밀맥주</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">빅빅빅빅맥</strong>
+            <p class="main__list-text">5,800원</p>
+            <p>빅빅빅빅맥이랑 밀맥주</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">빅빅빅빅빅맥</strong>
+            <p class="main__list-text">5,900원</p>
+            <p>빅빅빅빅빅맥이랑 밀맥주</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">빅빅빅빅빅빅맥</strong>
+            <p class="main__list-text">6,000원</p>
+            <p>빅빅빅빅빅빅맥이랑 밀맥주</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">스몰맥</strong>
+            <p class="main__list-text">5,400원</p>
+            <p>스몰맥이랑 밀맥주</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">스몰스몰맥</strong>
+            <p class="main__list-text">5,300원</p>
+            <p>스몰스몰맥이랑 밀맥주</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">스몰스몰스몰맥</strong>
+            <p class="main__list-text">5,200원</p>
+            <p>스몰스몰스몰맥이랑 밀맥주</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">햄버거</strong>
+            <p class="main__list-text">1,400원</p>
+            <p>롯데리아 실존 버거</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">게살버거</strong>
+            <p class="main__list-text">22,800원</p>
+            <p>게살버거랑 플랑크톤</p>
           </div>
         </article>
         <article class="main__list box">
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
-            <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
-            <p>빅맥이랑 밀맥주</p>
+            <strong class="main__list-text">해파리꿀버거</strong>
+            <p class="main__list-text">28,000원</p>
+            <p>해파리꿀버거랑 다람이</p>
           </div>
         </article>
       </section>
