[feat] seminar contents

--- a/week2/index.html
+++ b/week2/index.html
@@ -5,11 +5,11 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>누구세요?</title>
+    <title>누군지 맞람맞</title>
   </head>
   <body>
     <header>
-      <h1>누구세요?</h1>
+      <h1>누군지 맞람맞</h1>
     </header>
     <main>
       <section class="scoreBoard">
