--- a/week1/index.html
+++ b/week1/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <script defer src="main.js"></script>
     <title>햄식이를 도와줄람줄</title>
   </head>
   <body>
@@ -24,7 +25,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">빅맥</strong>
-            <p class="main__list-text">5,500원</p>
+            <p class="main__list-price">5,500원</p>
             <p>빅맥이랑 밀맥주</p>
           </div>
         </article>
@@ -32,7 +33,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">빅빅맥</strong>
-            <p class="main__list-text">5,600원</p>
+            <p class="main__list-price">5,600원</p>
             <p>빅빅맥이랑 밀맥주</p>
           </div>
         </article>
@@ -40,7 +41,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">빅빅빅맥</strong>
-            <p class="main__list-text">5,700원</p>
+            <p class="main__list-price">5,700원</p>
             <p>빅빅빅맥이랑 밀맥주</p>
           </div>
         </article>
@@ -48,7 +49,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">빅빅빅빅맥</strong>
-            <p class="main__list-text">5,800원</p>
+            <p class="main__list-price">5,800원</p>
             <p>빅빅빅빅맥이랑 밀맥주</p>
           </div>
         </article>
@@ -56,7 +57,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">빅빅빅빅빅맥</strong>
-            <p class="main__list-text">5,900원</p>
+            <p class="main__list-price">5,900원</p>
             <p>빅빅빅빅빅맥이랑 밀맥주</p>
           </div>
         </article>
@@ -64,7 +65,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">빅빅빅빅빅빅맥</strong>
-            <p class="main__list-text">6,000원</p>
+            <p class="main__list-price">6,000원</p>
             <p>빅빅빅빅빅빅맥이랑 밀맥주</p>
           </div>
         </article>
@@ -72,7 +73,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">스몰맥</strong>
-            <p class="main__list-text">5,400원</p>
+            <p class="main__list-price">5,400원</p>
             <p>스몰맥이랑 밀맥주</p>
           </div>
         </article>
@@ -80,7 +81,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">스몰스몰맥</strong>
-            <p class="main__list-text">5,300원</p>
+            <p class="main__list-price">5,300원</p>
             <p>스몰스몰맥이랑 밀맥주</p>
           </div>
         </article>
@@ -88,7 +89,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">스몰스몰스몰맥</strong>
-            <p class="main__list-text">5,200원</p>
+            <p class="main__list-price">5,200원</p>
             <p>스몰스몰스몰맥이랑 밀맥주</p>
           </div>
         </article>
@@ -96,7 +97,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">햄버거</strong>
-            <p class="main__list-text">1,400원</p>
+            <p class="main__list-price">1,400원</p>
             <p>롯데리아 실존 버거</p>
           </div>
         </article>
@@ -104,7 +105,7 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">게살버거</strong>
-            <p class="main__list-text">22,800원</p>
+            <p class="main__list-price">22,800원</p>
             <p>게살버거랑 플랑크톤</p>
           </div>
         </article>
@@ -112,16 +113,17 @@
           <img width="105px" height="105px" class="main__list-image" src="https://cdn.dribbble.com/users/1787323/screenshots/11115027/media/d02a172ecd55b98b716d94ead600ef1a.png?compress=1&resize=400x300&vertical=top" alt="햄버거 사진">
           <div class="main__list-text-wrapper">
             <strong class="main__list-text">해파리꿀버거</strong>
-            <p class="main__list-text">28,000원</p>
+            <p class="main__list-price">28,000원</p>
             <p>해파리꿀버거랑 다람이</p>
           </div>
         </article>
       </section>
       <section class="main__cart box">
         <h2 class="main__cart-title">장바구니</h2>
+        <ul class="main__cart-list-wrapper"></ul>
         <div class="main__cart-line"></div>
         <h3 class="main__cart-title">누적 금액</h3>
-        <p>0원</p>
+        <p class="main__cart-total-price">0원</p>
         <div class="main__cart-line"></div>
         <div class="main__cart-button-wrapper">
           <button class="main__cart-button" type="button">주문하기</button>
