[feat] attach event listener on order, cancel button

--- a/week1/index.html
+++ b/week1/index.html
@@ -126,8 +126,8 @@
         <p class="main__cart-total-price">0원</p>
         <div class="main__cart-line"></div>
         <div class="main__cart-button-wrapper">
-          <button class="main__cart-button" type="button">주문하기</button>
-          <button class="main__cart-button" type="button">취소하기</button>
+          <button class="main__cart-button main__cart-button-order" type="button">주문하기</button>
+          <button class="main__cart-button main__cart-button-cancel" type="button">취소하기</button>
         </div>
       </section>
     </main>
