--- a/week1/index.html
+++ b/week1/index.html
@@ -131,5 +131,13 @@
         </div>
       </section>
     </main>
+    <div class="modal hide">
+      <div class="modal__content">
+        정말 구매할람할?
+        <button type="button">
+          <a href="./complete.html">O</a></button>
+        <button type="button" class="modal__cancel-btn">X</button>
+      </div>
+    </div>
   </body>
 </html>
