[feat] make up Main page

--- a/week3/public/index.html
+++ b/week3/public/index.html
@@ -30,7 +30,7 @@
       href="" />
     -->
 
-      <title>킹안받는 월드컵 은 짜</title>
+      <title>킹안받는 월드컵</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
