[feat] design a section structure

--- a/week4/public/index.html
+++ b/week4/public/index.html
@@ -30,7 +30,7 @@
       href="" />
     -->
 
-      <title>킹안받는 진짜 월드컵</title>
+      <title>미성동 맥주집 함가보자</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
