--- a/week4/public/index.html
+++ b/week4/public/index.html
@@ -30,7 +30,7 @@
       href="" />
     -->
 
-      <title>미성동 맥주집 함가보자</title>
+      <title>동네 킹주집 함가보자</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
