[feat] add responsive css

--- a/week1/index.html
+++ b/week1/index.html
@@ -10,7 +10,13 @@
     <title>햄식이를 도와줄람줄</title>
   </head>
   <body>
-    <header class="header"><h1>햄식이를 도와줄람줄</h1></header>
+    <header class="header">
+      <ul class="header__nav-lists">
+        <li class="header__nav-list">맥도날드</li>
+        <li class="header__nav-list">버거킹</li>
+      </ul>
+      <h1>햄식이를 도와줄람줄</h1>
+    </header>
     <main class="main__wrapper">
       <nav  class="main__nav box">
         <p class="main__nav-title">다른 거 먹람먹</p>
